<resources>
    <string name="app_name">Dialog Android</string>
    <string name="PopUpButton">Click Me Please</string>
    <string name="popupheader">Donate and get Pro</string>
    <string name="popupwarning">Restore previous purchase</string>
    <string name="sd">Small donation</string>
    <string name="md">Medium donation</string>
    <string name="ld">Large donation</string>
    <string name="sdrm">RM 7.49</string>
    <string name="mdrm">RM 10.99</string>
    <string name="lgrm">RM 23.99</string>
    <string name="popupdescription">Any donation will unlock all features and remove all Ads</string>

</resources>